--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ body {
 
   }
 
+
+
 @-webkit-keyframes desplazar2 {
   from {
     -webkit-transform: translateY(10%);
@@ -30,6 +32,7 @@ body {
     opacity: 1;
   }
 }
+
 @keyframes desplazar2 {
   from {
     -webkit-transform: translateY(10%);
@@ -39,6 +42,31 @@ body {
   to {
     -webkit-transform: translateY(0%);
             transform: translateY(0%);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes desplazar3 {
+	from {
+	  -webkit-transform: translateZ(10%);
+			  transform: translateZ(10%);
+	  opacity: 0;
+	}
+	to {
+	  -webkit-transform: translateZ(0%);
+			  transform: translateZ(0%);
+	  opacity: 1;
+	}
+}
+@keyframes desplazar2 {
+  from {
+    -webkit-transform: translateZ(10%);
+            transform: translateZ(10%);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: translateZ(0%);
+            transform: translateZ(0%);
     opacity: 1;
   }
 }
@@ -191,6 +219,74 @@ p {
 	color: white;
 	background-color: rgb(10, 145, 255);
 }
+
+.navegacion {
+	-webkit-animation: desplazar3 1s ease both 1 2s;
+	animation: desplazar3 1s ease both 1 2s;
+}
+
+figure {
+	border-radius: 100%;
+	display: block;
+	height: 150px;
+	position: relative;
+	width: 150px;
+  }
+  
+/*   img {
+	border-radius: inherit;
+	height: inherit;
+	width: inherit;
+  } */
+  
+  figure:after {
+	background-color: rgba(0, 0, 0, .5);
+	border-radius: 5px;
+	color: #fff;
+	content: attr(title);
+	opacity: 0;
+	padding: 6px 12px;
+	position: absolute;
+	left: 110%;
+	top: 30px;
+	transition: all .25s ease;
+	visibility: hidden;
+	white-space: nowrap;
+  }
+  
+  figure[tooltip-dir="left"]:after {
+	left: auto;
+	right: 110%;
+  }
+  
+  figure[tooltip-dir="bottom"]:after,
+  figure[tooltip-dir="top"]:after {
+	left: 50%;
+	  right: auto;
+  
+	transform: translateX(-50%);
+  }
+  
+  figure[tooltip-dir="bottom"]:after {
+	bottom: auto;
+	top: 110%;
+  }
+  
+  figure[tooltip-dir="top"]:after {
+	bottom: 110%;
+	top: auto;
+  }
+  
+  figure:hover:after {
+	opacity: 1;
+	visibility: visible;
+  }
+  
+  select {
+	border: 1px solid #ccc;
+	border-radius: 3px;
+	padding: 6px 12px;
+  }
 
 .cta2 {
 	display: inline-block;
@@ -1040,4 +1136,94 @@ html {
 		margin: 1.5%;
 	}
 }
+
+
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap");
+
+
+#youtube,
+#youtube-card {
+  display: none;
+  color: black;
+}
+
+@media (min-height: 425px) {
+  /** Youtube logo by https://codepen.io/alvaromontoro */
+  #youtube {
+    z-index: 50;
+    width: 100px;
+    height: 70px;
+    position: fixed;
+    bottom: 20px;
+    transform: scale(0.4);
+    transition: transform 0.5s;
+  }
+
+  #youtube {
+    display: block;
+    background: red;
+    right: 20px;
+    border-radius: 50% / 11%;
+  }
+
+
+
+
+
+  #youtube:hover,
+  #youtube:focus {
+    transform: scale(0.5);
+    color: black;
+  }
+
+
+  #youtube::before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 7.5%;
+    left: -6%;
+    width: 112%;
+    height: 85%;
+    background: red;
+    border-radius: 9% / 50%;
+  }
+
+  #youtube::after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 20px;
+    left: 40px;
+    width: 45px;
+    height: 30px;
+    border: 15px solid transparent;
+    box-sizing: border-box;
+    border-left: 30px solid white;
+  }
+
+  #youtube span {
+    font-size: 0;
+    position: absolute;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+  }
+/* 
+  #youtube:hover + #youtube-card {
+    z-index: 49;
+    display: block;
+    position: fixed;
+    bottom: 12px;
+    width: 300px;
+    background-color: rgba(255, 255, 255, 0.116);
+  } */
+
+/*   #youtube:hover + #youtube-card {
+    right: 10px;
+    padding: 25px 130px 25px 25px;
+  }
+ */
+}
+
 /* End  Media Query For Desktop */
