--- a/log.css
+++ b/log.css
@@ -17,6 +17,7 @@ body {
 
 
   }
+  
 
 
 
@@ -139,7 +140,101 @@ body {
   }
 
   
-  
+  @import url(https://fonts.googleapis.com/css?family=Roboto:300);
+
+.login-page {
+  width: 360px;
+  padding: 8% 0 0;
+  margin: auto;
+}
+.form {
+  position: absolute;
+  z-index: 99;
+  background: rgba(153, 150, 145, 0.863);
+  max-width: 360px;
+  top: 40em;
+  left: 83em;
+  border-radius: 10%;
+  margin: 0 auto 100px;
+  padding: 45px;
+  text-align: center;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  -webkit-animation: desplazar2 1s ease both 1 2.7s;
+  animation: desplazar2 1s ease both 1 2.7s;
+}
+.form input {
+  font-family: "Roboto", sans-serif;
+  outline: 0;
+  background: #f2f2f2;
+  width: 100%;
+  border: 0;
+  margin: 0 0 15px;
+  padding: 15px;
+  box-sizing: border-box;
+  font-size: 14px;
+}
+.form button {
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  outline: 0;
+  background: rgb(10, 145, 255);
+  width: 100%;
+  border: 0;
+  padding: 15px;
+  color: #FFFFFF;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+}
+.form button:hover,.form button:active,.form button:focus {
+  background: rgb(10, 145, 255);
+}
+.form .message {
+  margin: 15px 0 0;
+  color: #fcfcfc;
+  font-size: 12px;
+}
+.form .message a {
+  color: rgb(10, 145, 255);
+  text-decoration: none;
+}
+.form .register-form {
+  display: none;
+}
+.container2 {
+  position: relative;
+  z-index: 1;
+  max-width: 300px;
+  margin: 0 auto;
+}
+.container2:before, .container2:after {
+  content: "";
+  display: block;
+  clear: both;
+}
+.container2 .info {
+  margin: 50px auto;
+  text-align: center;
+}
+.container2 .info h1 {
+  margin: 0 0 15px;
+  padding: 0;
+  font-size: 36px;
+  font-weight: 300;
+  color: #1a1a1a;
+}
+.container2 .info span {
+  color: #4d4d4d;
+  font-size: 12px;
+}
+.container2 .info span a {
+  color: #000000;
+  text-decoration: none;
+}
+.container2 .info span .fa {
+  color: #EF3B3A;
+}
   
       
   
@@ -354,6 +449,7 @@ figure {
 }
 
 
+
 /* Header section */
 #header {
 	position: fixed;
@@ -362,8 +458,8 @@ figure {
 	top: 0;
 	width: 100vw;
 	height: auto;
-	-webkit-animation: desplazar 1s ease both 1 1s;
-	animation: desplazar 1s ease both 1 1s;
+	-webkit-animation: desplazar 1s ease both 1 0.1s;
+	animation: desplazar 1s ease both 1 0.1s;
 	
 }
 #header .header {
@@ -884,6 +980,8 @@ html {
 	/* max-width: 400px; */
 	width: 100%;
 }
+
+
 #contact .contact-item {
 	width: 80%;
 	padding: 20px;
@@ -898,6 +996,8 @@ html {
 	box-shadow: 0px 0px 18px 0 #0000002c;
 	transition: 0.3s ease box-shadow;
 }
+
+
 #contact .contact-item:hover {
 	box-shadow: 0px 0px 5px 0 #0000002c;
 }
@@ -1256,6 +1356,94 @@ html {
     padding: 25px 130px 25px 25px;
   }
  */
+}
+
+
+
+.main{
+	width: 350px;
+	height: 500px;
+	position: absolute;
+	top: 25em;
+	left: 85em;
+	z-index: 99999;
+	background: rgba(153, 150, 145, 0.863);
+	overflow: hidden;
+	border-radius: 15%;
+	box-shadow: 5px 20px 50px #000;
+	-webkit-animation: desplazar2 1s ease both 1 1.1s;
+	animation: desplazar2 1s ease both 1 1.1s;
+}
+#chk{
+	display: none;
+}
+.signup{
+	position: relative;
+	width:100%;
+	height: 100%;
+}
+label{
+	color: #fff;
+	font-size: 2.3em;
+	justify-content: center;
+	display: flex;
+	margin: 60px;
+	font-weight: bold;
+	cursor: pointer;
+	transition: .5s ease-in-out;
+}
+input{
+	width: 60%;
+	height: 20px;
+	background: #e0dede;
+	justify-content: center;
+	display: flex;
+	margin: 20px auto;
+	padding: 10px;
+	border: none;
+	outline: none;
+	border-radius: 5px;
+}
+button{
+	width: 60%;
+	height: 40px;
+	margin: 10px auto;
+	justify-content: center;
+	display: block;
+	color: #fff;
+	background: #573b8a9d;
+	font-size: 1em;
+	font-weight: bold;
+	margin-top: 20px;
+	outline: none;
+	border: none;
+	border-radius: 5px;
+	transition: .2s ease-in;
+	cursor: pointer;
+}
+button:hover{
+	background: #333030;
+}
+.login{
+	height: 460px;
+	background: rgb(10, 145, 255);
+	border-radius: 60% / 10%;
+	transform: translateY(-180px);
+	transition: .8s ease-in-out;
+}
+.login label{
+	color: #ffffff;
+	transform: scale(.6);
+}
+
+#chk:checked ~ .login{
+	transform: translateY(-500px);
+}
+#chk:checked ~ .login label{
+	transform: scale(1);	
+}
+#chk:checked ~ .signup label{
+	transform: scale(.6);
 }
 
 /* End  Media Query For Desktop */
