--- a/forum.css
+++ b/forum.css
@@ -366,42 +366,34 @@ figure {
 	animation: desplazar 1s ease both 1 0.1s;
 	
 }
-.container {
-  position: relative;
-  width: 100%;
-  min-height: 100vh;
-  padding: 2rem;
-  background-color: #fafafa;
-  overflow: hidden;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 
 .form {
   width: 100%;
-  max-width: 820px;
-  background-color: #fff;
+  max-width: 1500px;
+  background-color: transparent;
   border-radius: 10px;
   box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
   overflow: hidden;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  position: absolute;
+  top: 110em;
+/*   top: 40em;
+  left: 80em; */
 }
 
 .contact-form {
-  background-color: #1abc9c;
+  background-color: transparent;
   position: relative;
 }
 
-.circle {
+/* .circle {
   border-radius: 50%;
   background: linear-gradient(135deg, transparent 20%, #149279);
   position: absolute;
 }
-
-.circle.one {
+ */
+/* .circle.one {
   width: 130px;
   height: 130px;
   top: 130px;
@@ -413,9 +405,9 @@ figure {
   height: 80px;
   top: 10px;
   right: 30px;
-}
+} */
 
-.contact-form:before {
+/* .contact-form:before {
   content: "";
   position: absolute;
   width: 26px;
@@ -424,11 +416,10 @@ figure {
   transform: rotate(45deg);
   top: 50px;
   left: -13px;
-}
+} */
 
 form {
-  padding: 2.3rem 2.2rem;
-  z-index: 10;
+  padding: 5.3rem 1.2rem;
   overflow: hidden;
   position: relative;
 }
@@ -436,9 +427,9 @@ form {
 .title {
   color: #fff;
   font-weight: 500;
-  font-size: 1.5rem;
+  font-size: 3.5rem;
   line-height: 1;
-  margin-bottom: 0.7rem;
+  margin-bottom: 3.7rem;
 }
 
 .input-container {
@@ -478,7 +469,6 @@ textarea.input {
   font-size: 0.9rem;
   font-weight: 400;
   pointer-events: none;
-  z-index: 1000;
   transition: 0.5s;
 }
 
@@ -491,8 +481,9 @@ textarea.input {
   padding: 0.6rem 1.3rem;
   background-color: #fff;
   border: 2px solid #fafafa;
+  font: bold;
   font-size: 0.95rem;
-  color: #1abc9c;
+  color: rgb(10, 145, 255);
   line-height: 1;
   border-radius: 25px;
   outline: none;
@@ -515,7 +506,6 @@ textarea.input {
   padding: 0 0.4rem;
   color: transparent;
   pointer-events: none;
-  z-index: 500;
 }
 
 .input-container span:before,
@@ -526,7 +516,7 @@ textarea.input {
   opacity: 0;
   transition: 0.3s;
   height: 5px;
-  background-color: #1abc9c;
+  background-color: transparent;
   top: 50%;
   transform: translateY(-50%);
 }
@@ -543,7 +533,8 @@ textarea.input {
   top: 0;
   transform: translateY(-50%);
   left: 25px;
-  font-size: 0.8rem;
+  font-size: 1.8rem;
+  color: rgb(10, 145, 255);
 }
 
 .input-container.focus span:before,
@@ -558,18 +549,23 @@ textarea.input {
 }
 
 .contact-info .title {
-  color: #1abc9c;
+  color: rgb(10, 145, 255);
+  margin-top: 0.8em;
+  left: 2em;
+  position: absolute;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif	;
 }
 
 .text {
-  color: #333;
-  margin: 1.5rem 0 2rem 0;
+  color: rgb(255, 255, 255);
+  margin: 9.5rem 0 3rem 0;
+  font-size: 2em;
 }
 
 .information {
   display: flex;
   color: #555;
-  margin: 0.7rem 0;
+  margin: 4.5rem 0;
   align-items: center;
   font-size: 0.95rem;
 }
@@ -613,14 +609,14 @@ textarea.input {
   position: absolute;
   width: 110px;
   height: 100px;
-  border: 22px solid #1abc9c;
+/*   border: 22px solid rgb(10, 145, 255); */
   border-radius: 50%;
   bottom: -77px;
   right: 50px;
   opacity: 0.3;
 }
 
-.big-circle {
+/* .big-circle {
   position: absolute;
   width: 500px;
   height: 500px;
@@ -629,9 +625,9 @@ textarea.input {
   bottom: 50%;
   right: 50%;
   transform: translate(-40%, 38%);
-}
+} */
 
-.big-circle:after {
+/* .big-circle:after {
   content: "";
   position: absolute;
   width: 360px;
@@ -640,16 +636,16 @@ textarea.input {
   border-radius: 50%;
   top: calc(50% - 180px);
   left: calc(50% - 180px);
-}
+} */
 
-.square {
+/* .square {
   position: absolute;
   height: 400px;
   top: 50%;
   left: 50%;
   transform: translate(181%, 11%);
   opacity: 0.2;
-}
+} */
 
 @media (max-width: 850px) {
   .form {
@@ -669,10 +665,10 @@ textarea.input {
     right: 70px;
   }
 
-  .square {
+/*   .square {
     transform: translate(140%, 43%);
     height: 350px;
-  }
+  } */
 
   .big-circle {
     bottom: 75%;
@@ -689,7 +685,7 @@ textarea.input {
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 100px) {
   .container {
     padding: 1.5rem;
   }
@@ -698,7 +694,6 @@ textarea.input {
     display: none;
   }
 
-  .square,
   .big-circle {
     display: none;
   }
@@ -898,6 +893,7 @@ textarea.input {
 	background-position: top center;
 	position: relative;
 	z-index: 1;
+	
 
 	
 }
@@ -1249,6 +1245,7 @@ html {
 	max-width: 1200px;
 	margin: 0 auto;
 	width: 90%;
+
 	
 }
 #contact .contact-items {
