--- a/forum.css
+++ b/forum.css
@@ -825,10 +825,10 @@ textarea.input {
 
 #header .nav-list ul li a.activo{
 	background: transparent;
-	border: 1px solid rgb(10, 145, 255);
+	/* border: 1px solid rgb(10, 145, 255); */
+	border-bottom: 1px solid rgb(10, 145, 255);
 	
   }
-
 #header .hamburger {
 	height: 60px;
 	width: 60px;
