--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
+	cursor: none;
 	
 }
 
@@ -13,10 +14,49 @@ body {
 	background-position: top center;
 	position: relative;
 	z-index: 1;
+	cursor: none;
 	
 
 
   }
+
+  .page {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.page__inner {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.cursor {
+  position: fixed;
+  left: 0;
+  top: 0;
+  pointer-events: none;
+  z-index: 99999999;
+}
+.cursor--small {
+  width: 5px;
+  height: 5px;
+  left: -2.5px;
+  top: -2.5px;
+  border-radius: 50%;
+  z-index: 99999999;
+  background: rgb(255, 255, 255);
+}
+.cursor--canvas {
+  width: 100vw;
+  height: 100vh;
+  z-index: 999999999;
+}
+.page, .page a {
+ cursor: none;
+}
 
 
 
@@ -477,7 +517,7 @@ figure {
 	align-items: center;
 	justify-content: center;
 	z-index: 100;
-	cursor: pointer;
+	/* cursor: pointer; */
 	transform: scale(0.8);
 	margin-right: 20px;
 }
@@ -630,9 +670,9 @@ figure {
 	max-width: 500px;
 	height: 190px;
 	margin: 0 auto;
-	box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.25);
+/* 	box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.25); */
 	border-top: 1px solid rgba(131, 131, 131, 0.815);
-	border-right: 1px solid rgba(131, 131, 131, 0.815);
+	/* border-right: 1px solid rgba(131, 131, 131, 0.815); */
 	backdrop-filter: blur(8px);
 	-webkit-backdrop-filter: blur(8px);
 	border-radius: 25px;
@@ -671,7 +711,7 @@ figure {
 	position: relative;
 	z-index: 1;
 	overflow: hidden;
-	box-shadow: 20px 200px 50px rgba(0, 0, 0, 0.25);
+	box-shadow: 20px 40px 50px rgba(0, 0, 0, 0.25);
 	border-top: 1px solid rgba(131, 131, 131, 0.815);
 	border-right: 1px solid rgba(131, 131, 131, 0.815);
 	backdrop-filter: blur(8px);
@@ -956,7 +996,7 @@ html {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	cursor: pointer;
+	/* cursor: pointer; */
 	content: '';
 	box-shadow: 0px 0px 18px 0 #0000002c;
 	transition: 0.3s ease box-shadow;
@@ -1203,7 +1243,7 @@ html {
 	left: 199em;
     transform: scale(0.6);
     transition: transform 0.5s;
-	cursor: pointer;
+	/* cursor: pointer; */
 	-webkit-animation: desplazar2 1.2s ease both 1 1.5s;
 	animation: desplazar2 1.2s ease both 1 1.5s;
 
